[package]
name = "tcss360-project"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs_tilemap = { version = "0.16", features = ["atlas"] }
bevy_pixcam = "0.16"
rand = { version = "0.9", features = ["log"] }
wyrand = "0.3"

[dependencies.bevy]
version = "0.16.1"
features = ["debug_glam_assert", "file_watcher", "bevy_dev_tools"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["debug"]
debug = ["bevy/glam_assert", "bevy/file_watcher", "bevy/dynamic_linking"]

