[package]
name = "tcss360-project"
version = "0.1.0"
edition = "2024"

[dependencies]
# TODO: Update accesskit when bevy does.
accesskit = { version = "0.18.0", features = ["enumn", "serde"] }
bevy_ecs_tilemap = { version = "0.16", features = ["atlas"] }
const_format = "0.2"
directories = "6"
rand = { version = "0.9", features = ["log"] }
ron = "0.10"
serde = { version = "1", features = ["serde_derive", "alloc"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
sqlite = { version = "0.37", optional = true }
thiserror = "2"
wyrand = { version = "0.3", features = ["serde1"] }
blake3 = { version = "1.8", features = [ "pure" ] }
chrono = { version = "0.4.41", features = ["serde"], optional = true}

[dependencies.bevy]
version = "0.16"
default-features = false
features = [
  # Uncomment and add more as needed.
  #"animation",
  "async_executor",
  "bevy_asset",
  "bevy_audio",
  #"bevy_color",
  "bevy_core_pipeline",
  "bevy_gilrs",
  #"bevy_gizmos",
  #"bevy_gltf",
  #"bevy_input_focus",
  "bevy_log",
  #"bevy_mesh_picking_backend",
  #"bevy_pbr",
  "bevy_picking",
  "bevy_render",
  #"bevy_scene",
  "bevy_sprite",
  "bevy_sprite_picking_backend",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "bevy_window",
  "bevy_winit",
  #"custom_cursor",
  "default_font",
  #"hdr",
  "multi_threaded",
  "png",
  #"smaa_luts",
  "std",
  "serialize",
  "sysinfo_plugin",
  #"tonemapping_luts",
  #"vorbis",
  "webgl2",
  "x11",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[profile.wayland]
inherits = "dev"

[profile.wasm]
inherits = "dev"

[features]
default = ["sqlite"]
sqlite = ["dep:sqlite", "dep:chrono"]
debug = [
  "bevy/bevy_dev_tools",
  "bevy/debug_glam_assert",
]
dev = [
  "bevy/dynamic_linking",
  "bevy/file_watcher",
]

